; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_get_tsa_section.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_get_tsa_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BASE_SECTION = common dso_local global i32 0, align 4
@ENV_DEFAULT_TSA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @TS_CONF_get_tsa_section(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %19, label %7

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @BASE_SECTION, align 4
  %10 = load i32, i32* @ENV_DEFAULT_TSA, align 4
  %11 = call i8* @NCONF_get_string(i32* %8, i32 %9, i32 %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %7
  %15 = load i32, i32* @BASE_SECTION, align 4
  %16 = load i32, i32* @ENV_DEFAULT_TSA, align 4
  %17 = call i32 @ts_CONF_lookup_fail(i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %7
  br label %19

19:                                               ; preds = %18, %2
  %20 = load i8*, i8** %4, align 8
  ret i8* %20
}

declare dso_local i8* @NCONF_get_string(i32*, i32, i32) #1

declare dso_local i32 @ts_CONF_lookup_fail(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
